<resources>
    <string name="app_name">UG Cakes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    // GCM
    <!--<string name="gcm_defaultSenderId">381984310290</string>-->
    <string name="gcm_defaultSenderId">730074876211</string>
    <string name="gcm_api_key">AIzaSyApU1vvMygtbZjmQ6XFRxu1o-9jSNW8g1o</string>

     <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myContent">Static contents for bakery app. Static contents for bakery app. Static contents for bakery app. Static contents for bakery app. Static contents for bakery app. Static contents for bakery app. Static contents for bakery app. Static contents for bakery app. Static contents for bakery app. Static contents for bakery app. Static contents for bakery app. Static contents for bakery app. Static contents for bakery app.Static contents for bakery app.</string>
    <string name="faceboook_login">Facebook Login</string>
    <string name="label_button_continue_without_login">Continue Without Login</string>
    <string name="title_activity_2">Activity2</string>
    <!--<string name="app_id">709240645844749</string>-->
    <string name="app_id">1692881424284413</string>
    <string name="normal_register">Register with us</string>
    <string name="skip_and_continue"><![CDATA[Skip & Continue     >]]></string>
    <string name="title_activity_normal_register">NormalRegister</string>
    <string name="action_done">Done</string>
    <string name="thank_for_signing">Thanks for signing up!</string>
    <string name="ready_to_rock">You are ready to rock now!</string>
    <string name="user_name">Your Name</string>
    <string name="phoneDemo">98181-33233</string>
    <string name="mobile">Mobile</string>
    <string name="mailDemo">mail_demo@gmail.com</string>
    <string name="email">Primary</string>
    <string name="go">GO</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="network_error">Please Check your internet connection and try again ...</string>
    <string name="title_activity_login">Login</string>
    <string name="categories">Categories</string>
    <string name="categoriesDemo">Categories 1</string>
    <string name="see_more">See More</string>
    <string name="gifts">Gifts</string>
    <string name="giftDemo">Gift 1</string>
    <string name="settings">Settings</string>
    <string name="accessories">Accessories</string>
    <string name="offers">Offers</string>
    <string name="cakes">Cakes</string>
    <string name="title_activity_see_all_categories">SeeAllCategories</string>
    <string name="title_activity_see_all_gifts">SeeAllGifts</string>
    <string name="title_activity_single_item_view">SingleItemView</string>
    <string name="single_item">Single Item</string>
    <string name="title_activity_single_item_detils">SingleItemDetils</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="login">Login with Facebook</string>
    <string name="title_activity_single_item_gift_details">SingleItemGiftDetails</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_edit">Edit Profile</string>
    <string name="title_activity_setting">Setting</string>
    <string name="dealAndOffers"><![CDATA[Deals & Offers]]></string>
    <string name="urgentCakes">Urgent Cakes</string>
    <string name="action_logout">Logout</string>
    <string name="complain">Write a complain</string>
    <string name="title_activity_notice_board">Notice Board</string>
    <string name="about">About</string>
    <string name="mail">Email: info@urbangirl.me</string>
    <string name="ug_description">The tastiest cakes available in Kathmandu, in any design you want. Order online, pay cash on delivery.  Deliver is free within Ring Road starting 2 pounds. All prices shown are of 2 pounds by default. Please choose your cake size and flavor while you order.</string>
    <string name="app_version">Version 1.0</string>
    <string name="title_activity_grid_cake">GridCake</string>
    <string name="title_activity_grid_product_gift">GridProductGift</string>

</resources>
