<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    tools:context="com.urbangirlbakeryandroidapp.alignstech.fragments.HomeFragment">

    <!-- Categories Sector -->
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/myPrimaryColor"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/Categories_padding"
                    android:text="@string/categories"
                    android:textColor="@color/myWindowBackground"
                    android:textSize="@dimen/categoriesTextSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/Categories_padding">

                    <ImageView
                        android:id="@+id/categories_image_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5sp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/textView_categories_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/categories_image_1"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/categories_image_1"
                        android:layout_toRightOf="@+id/categories_image_1"
                        android:gravity="center|left"
                        android:paddingLeft="8dp"
                        android:text="@string/categoriesDemo"
                        android:textColor="@color/myTextColor"
                        android:textSize="@dimen/textSizeCategoriesItem" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/categories_image_1"
                        android:layout_alignEnd="@+id/textView_categories_1"
                        android:layout_alignRight="@+id/textView_categories_1"
                        android:background="@color/myAccentColor" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/Categories_padding">

                    <ImageView
                        android:id="@+id/categories_image_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5sp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/textView_categories_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/categories_image_2"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/categories_image_2"
                        android:layout_toRightOf="@+id/categories_image_2"
                        android:gravity="center|left"
                        android:paddingLeft="8dp"
                        android:text="@string/categoriesDemo"
                        android:textColor="@color/myTextColor"
                        android:textSize="@dimen/textSizeCategoriesItem" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/categories_image_2"
                        android:layout_alignEnd="@+id/textView_categories_2"
                        android:layout_alignRight="@+id/textView_categories_2"
                        android:background="@color/myAccentColor" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/Categories_padding">

                    <ImageView
                        android:id="@+id/categories_image_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5sp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/textView_categories_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/categories_image_3"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/categories_image_3"
                        android:layout_toRightOf="@+id/categories_image_3"
                        android:gravity="center|left"
                        android:paddingLeft="8dp"
                        android:text="@string/categoriesDemo"
                        android:textColor="@color/myTextColor"
                        android:textSize="@dimen/textSizeCategoriesItem" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_alignBottom="@+id/categories_image_3"
                        android:layout_alignEnd="@+id/textView_categories_3"
                        android:layout_alignRight="@+id/textView_categories_3"
                        android:background="@color/myAccentColor" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp">

                    <TextView
                        android:id="@+id/see_more_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/Categories_padding"
                        android:text="@string/see_more"
                        android:textColor="@color/myPrimaryColor"
                        android:textSize="@dimen/textSizeSeeMore" />

                    <ImageView
                        android:id="@+id/see_more_image"
                        android:layout_width="60dp"
                        android:layout_height="20sp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_launcher" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
